tests/ui/wasm/externref-position-errors.stderr
error: wasm `externref` cannot be used in a struct field: it may only appear as a bare function parameter, return value or local
  --> $DIR/externref-position-errors.rs:36:12
   |
LL |     pub v: externref,
   |            ^^^^^^^^^

error: wasm `externref` cannot be used in a struct field: it may only appear as a bare function parameter, return value or local
  --> $DIR/externref-position-errors.rs:41:23
   |
LL | pub struct BadWrapper(externref);
   |                       ^^^^^^^^^

error: wasm `externref` cannot be used inside `&externref`: it may only appear as a bare function parameter, return value or local
  --> $DIR/externref-position-errors.rs:29:25
   |
LL |     fn bad_ref_param(v: &externref);
   |                         ^^^^^^^^^^

error: wasm `externref` cannot be used in a `static`: it may only appear as a bare function parameter, return value or local
  --> $DIR/externref-position-errors.rs:31:24
   |
LL |     static BAD_STATIC: externref;
   |                        ^^^^^^^^^

error: wasm `externref` cannot be used inside `(externref, externref)`: it may only appear as a bare function parameter, return value or local
  --> $DIR/externref-position-errors.rs:61:13
   |
LL |     let t = (v, v);
   |             ^^^^^^

error: wasm `externref` cannot be used inside `(externref, externref)`: it may only appear as a bare function parameter, return value or local
  --> $DIR/externref-position-errors.rs:61:9
   |
LL |     let t = (v, v);
   |         ^

error: wasm `externref` cannot be used inside `[externref; 2]`: it may only appear as a bare function parameter, return value or local
  --> $DIR/externref-position-errors.rs:67:13
   |
LL |     let a = [v, v];
   |             ^^^^^^

error: wasm `externref` cannot be used inside `[externref; 2]`: it may only appear as a bare function parameter, return value or local
  --> $DIR/externref-position-errors.rs:67:9
   |
LL |     let a = [v, v];
   |         ^

error: wasm `externref` cannot be used inside `&externref`: it may only appear as a bare function parameter, return value or local
  --> $DIR/externref-position-errors.rs:73:13
   |
LL |     let r = &v;
   |             ^^

error: wasm `externref` cannot be used inside `&externref`: it may only appear as a bare function parameter, return value or local
  --> $DIR/externref-position-errors.rs:73:9
   |
LL |     let r = &v;
   |         ^

error: wasm `externref` cannot be used as a generic argument
  --> $DIR/externref-position-errors.rs:83:5
   |
LL |     generic(v);
   |     ^^^^^^^

error: wasm `externref` cannot be used inside `{closure@$DIR/externref-position-errors.rs:88:14: 88:21}`: it may only appear as a bare function parameter, return value or local
  --> $DIR/externref-position-errors.rs:88:14
   |
LL |     let _c = move || v;
   |              ^^^^^^^^^

error: wasm `externref` cannot be used inside `{closure@$DIR/externref-position-errors.rs:88:14: 88:21}`: it may only appear as a bare function parameter, return value or local
  --> $DIR/externref-position-errors.rs:88:9
   |
LL |     let _c = move || v;
   |         ^^

error: aborting due to 13 previous errors

